# linkedin-posts

./: .gitignore  240522_LLN_plots_2x2.py  240525_prompt_engineering.py  240614_moments_plots.py  240814_PDFs_>_1.py  240923_t-dist_to_std_normal.py  241018_CLT-pop-dists.py  250206_SD-sampleSize.R  250206_SD_sampleSize.R  250206_sampleSize_SD.R  250221_sampleSize_pvalue.py  250314_Buffon-needle-pi.py  250324_feelings-after-layoff.py  250612_CI-convergence.py  250819_SD-and-SE_vs_N.py  250819_SD-vs-SE.py  251010_nobel_winner_counts.py  260325_speeding-carousel.py  260325_speeding-time-saved.py  260611_SQL-execution_order.sql  README-creater.py  README.md  pyproject.toml
.github/workflows/: update-readme.yml
data/: nobel_prize_dataset.csv
